--- a/src/app/dashboard/dashboard-item/dashboard-item.component.scss
+++ b/src/app/dashboard/dashboard-item/dashboard-item.component.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   font-family: $font-system;
   padding: 16px;
-  background: white;
+  background: $background-primary;
   border-radius: 24px;
   display: flex;
   flex-direction: column;
