--- a/src/app/empty/empty.component.scss
+++ b/src/app/empty/empty.component.scss
@@ -16,7 +16,7 @@
     align-items: center;
     gap: 4px;
     font-size: 18px;
-    color: #4b4848;
+    color: $color-button-icon;
   }
 
   &__icon {
