--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,4 @@
-<div class="navigation"
-     [class.navigation--minimize]="(sideNavService.collapse$ | async)">
+<div class="navigation">
   <div class="navigation__title-container">
     <app-button button-primary (click)="onAdd(selectedTabIndex)">
       <mat-icon svgIcon="add"></mat-icon>
