--- a/src/app/shared/components/settings/setting/setting.component.html
+++ b/src/app/shared/components/settings/setting/setting.component.html
@@ -1,6 +1,6 @@
 <section class="setting">
   <span class="setting__label">
-    <mat-icon>{{icon}}</mat-icon>
+    <mat-icon [svgIcon]="customIcon">{{icon}}</mat-icon>
     {{label}}
   </span>
   <div class="setting__control">
