--- a/src/app/storage/storage.component.scss
+++ b/src/app/storage/storage.component.scss
@@ -3,7 +3,7 @@
 
 .storage {
   &__dev {
-    color: #4b4848;
+    color: $color-button-icon;
     display: flex;
     flex-direction: column;
     justify-content: center;
