--- a/src/app/database-select/database-select.component.html
+++ b/src/app/database-select/database-select.component.html
@@ -1,6 +1,6 @@
 <div class="database-select">
   <div class="database-select__buttons">
     <button mat-button class="button button__create" (click)="onCreate()">{{"PAGES.DATABASE_SELECT.CREATE" | translate}}</button>
-    <button class="button" mat-button (click)="onOpen()">{{"PAGES.DATABASE_SELECT.OPEN" | translate}}</button>
+    <button class="button button__cancel" mat-button (click)="onOpen()">{{"PAGES.DATABASE_SELECT.OPEN" | translate}}</button>
   </div>
 </div>
