--- a/src/app/detail/detail.component.scss
+++ b/src/app/detail/detail.component.scss
@@ -18,7 +18,7 @@
     font-family: $font-system;
     font-weight: normal;
     font-size: 32px;
-    color: $font-secondary;
+    color: $font-color-secondary;
   }
 
   &__empty-text {
