--- a/src/app/home/navigation-bar/navigation-bar.component.scss
+++ b/src/app/home/navigation-bar/navigation-bar.component.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  background-color: $background-primary;
 
   &__navigation {
     height: 100%;
@@ -17,7 +18,7 @@
     align-items: center;
     gap: 8px;
 
-    background-color: #fafafa;
+    background-color: $background-secondary;
     border-radius: 0 24px 0 0;
     box-shadow: inset 0px 1px 3px 1px rgb(0 0 0 / 6%);
   }
