--- a/src/app/shared/components/create-dialog/create-dialog.component.scss
+++ b/src/app/shared/components/create-dialog/create-dialog.component.scss
@@ -18,9 +18,12 @@
   }
 
   &__icons-container-title {
-    font-size: 14px;
     margin-left: 10px;
+
+    color: $font-color-primary;
     font-family: $font-system;
+    font-size: 14px;
+    columns: $font-color-primary;
   }
 
   &__icons-container-content {
@@ -28,7 +31,8 @@
     flex-direction: column;
     gap: 12px;
     border-radius: 18px;
-    border: 1.5px solid #ebebeb;
+    border: 1.5px solid $color-border;
+    background-color: $background-secondary;
     padding: 12px;
   }
 
@@ -47,7 +51,7 @@
   &__icons-section-title {
     font-family: $font-system;
     font-size: 12px;
-    color: $font-primary;
+    color: $font-color-primary;
     font-weight: 500;
   }
 
@@ -57,17 +61,17 @@
     height: 38px;
     width: 38px;
     border-radius: 12px;
-    color: #4b4848;
+    color: $color-button-icon;
     display: flex;
     align-items: center;
     justify-content: center;
 
     &--selected {
-      background: rgba(0, 0, 0, 0.10);
+      background: $background-button-hover;
     }
 
     &:hover {
-      background: rgba(0, 0, 0, 0.05);
+      background: $background-button-hover;
     }
   }
 }
