--- a/src/app/shared/components/currency-dialog/currency-dialog.component.scss
+++ b/src/app/shared/components/currency-dialog/currency-dialog.component.scss
@@ -25,7 +25,7 @@
     margin-bottom: 16px;
 
     border-radius: 32px;
-    background: var(--secondary-color);
+    background: $color-secondary;
   }
 
   &__icon {
@@ -38,7 +38,7 @@
   }
 
   &__title {
-    color: $font-primary;
+    color: $font-color-primary;
     font-size: 18px;
     font-weight: bold;
   }
@@ -46,7 +46,7 @@
   &__description {
     line-height: 1.4;
     font-size: 14px;
-    color: $font-secondary;
+    color: $font-color-secondary;
   }
 
   &__currency-preview {
@@ -60,7 +60,7 @@
     width: 19px;
     height: 20px;
 
-    color: #4b4848;
+    color: $color-button-icon;
   }
 
   &__currency-name {
@@ -77,6 +77,6 @@
     width: 20px;
     margin-right: 8px !important;
 
-    color: #4b4848;
+    color: $color-button-icon;
   }
 }
