--- a/src/app/shared/components/delete-dialog/delete-dialog.component.scss
+++ b/src/app/shared/components/delete-dialog/delete-dialog.component.scss
@@ -5,6 +5,7 @@
 .delete-dialog {
   padding: 16px 16px 24px 16px;
 
+  background: $background-primary;
   font-family: $font-system;
   user-select: none;
 
@@ -24,7 +25,7 @@
 
     text-align: center;
     font-size: 20px;
-    color: $font-primary;
+    color: $font-color-primary;
   }
 
   &__text {
@@ -32,7 +33,7 @@
 
     line-height: 1.4;
     font-size: 14px;
-    color: $font-secondary;
+    color: $font-color-secondary;
   }
 
   &__icon {
@@ -63,7 +64,7 @@
     border-radius: 8px;
     font-family: $font-system;
     font-weight: normal;
-    color: $font-primary;
+    color: $font-color-primary;
   }
   
   .button__submit {
@@ -73,8 +74,12 @@
   }
 
   .button__cancel {
-    background-color: #f1f1f1;
-    border-color: #f1f1f1;
-    color: $font-primary;
+    background-color: transparent;
+    border-color: transparent;
+    color: $font-color-primary;
+
+    &:hover {
+      background: $background-button-hover;
+    }
   }
 }
