--- a/src/app/shared/components/release-notes/release-notes.component.scss
+++ b/src/app/shared/components/release-notes/release-notes.component.scss
@@ -18,14 +18,18 @@
     font-weight: bold;
   }
 
-  &__first-title {
+  &__title {
     margin-top: 0;
+
+    color: $font-color-primary;
   }
 
   &__text {
     font-size: 14px;
     margin-bottom: 8px;
     line-height: 1.2;
+
+    color: $font-color-secondary;
   }
 
   &__header {
@@ -64,7 +68,7 @@
   .button {
     font-family: $font-system;
     font-weight: normal;
-    color: $font-primary;
+    color: $font-color-primary;
     min-width: initial;
     padding: 0 8px;
     height: 128px;
@@ -129,7 +133,6 @@
     height: 12px;
     width: 12px;
     border-radius: 8px;
-    border: 1px solid $separator-color;
     background-color: white;
     transition: transform 0.2s ease-in;
     cursor: pointer;
@@ -147,7 +150,7 @@
 }
 
 .close-button {
-  color: $font-primary;
+  color: $font-color-primary;
   min-width: initial;
   padding: 0 8px;
 }
