--- a/src/app/shared/components/rich-widget/rich-widget.component.scss
+++ b/src/app/shared/components/rich-widget/rich-widget.component.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
   gap: 8px;
 
-  background: white;
+  background: $background-primary;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
   transition: box-shadow 0.3s ease-in;
   padding: 16px 16px 12px 16px;
@@ -25,7 +25,7 @@
     width: 18px;
     line-height: 18px;
     cursor: pointer;
-    color: #4b4848;
+    color: $color-button-icon;
   }
 
   &__info-section {
@@ -37,14 +37,16 @@
   &__title {
     font-size: 12px;
     font-weight: 500;
-    color: #4b4848;
+    color: $font-color-secondary;
   }
 
   &__value {
-    font-size: 16px;
-    font-weight: bold;
     display: flex;
     align-items: center;
+
+    color: $font-color-primary;
+    font-size: 16px;
+    font-weight: bold;
   }
 
   &__illustration {
