--- a/src/app/shared/components/switch/switch.component.scss
+++ b/src/app/shared/components/switch/switch.component.scss
@@ -50,7 +50,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #f2f2f2;
+    background-color: $background-secondary;
     box-shadow: inset 0px 1px 2px 1px rgb(0 0 0 / 4%);
   }
 
@@ -64,7 +64,7 @@
   
     border-radius: 4px;
   
-    background-color: white;
+    background-color: $background-primary;
     transition: transform .2s ease;
     box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 4%),
                 0px 1px 1px 0px rgb(0 0 0 / 4%),
