--- a/src/app/shared/components/widget/widget.component.scss
+++ b/src/app/shared/components/widget/widget.component.scss
@@ -10,7 +10,7 @@
 
   box-sizing: border-box;
 
-  background: white;
+  background: $background-primary;
   box-shadow: rgb(0 0 0 / 10%) 0px 1px 2px 0px;
 
   border-radius: 24px;
@@ -30,7 +30,7 @@
     width: 15px;
 
     font-size: 15px;
-    color: $font-secondary;
+    color: $font-color-secondary;
     cursor: pointer;
   }
 
@@ -43,7 +43,7 @@
     font-weight: 500;
     align-items: center;
     font-size: 14px;
-    color: #4b4848;
+    color: $font-color-secondary;
     gap: 8px;
     margin: 0px;
   }
