fix(app): colors

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -57,7 +57,7 @@ html[data-platform='linux'] {
 
     --color-border: #4d4d4d;
     --color-button-icon: #f7f7f7;
-    --color-dangerous: #8c2226;
+    --color-dangerous: #d7121a;
 
     --platform-color-primary: white;
     --platform-color-secondary: #a6a6a6;
