--- a/src/app/database-select/database-select.component.scss
+++ b/src/app/database-select/database-select.component.scss
@@ -42,7 +42,7 @@ button {
 
 .button__create {
   background-color: $color-primary;
-  color: $font-color-primary;
+  color: #fff;
 }
 
 .button__cancel {
