--- a/src/_fonts.scss
+++ b/src/_fonts.scss
@@ -26,4 +26,12 @@
   'opsz' 24
 }
 
-$font-system: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+:root {
+  --font-system: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+}
+
+html[data-platform='windows'] {
+  --font-system: sans-serif;
+}
+
+$font-system: var(--font-system);
