fix(welcome-page): #124

--- a/src/app/welcome-page/welcome-page.component.scss
+++ b/src/app/welcome-page/welcome-page.component.scss
@@ -48,7 +48,7 @@
     align-items: center;
 
     background-size: 192px;
-    background-image: url('/assets/illustration.png');
+    background-image: url('~assets/illustration.png');
 
     animation: slide 15s linear infinite;
   }
