chore(app): extend release notes

--- a/src/app/shared/components/release-notes/release-notes.component.html
+++ b/src/app/shared/components/release-notes/release-notes.component.html
@@ -9,6 +9,10 @@
         <ul class="release-notes__list">
           <li class="release-notes__text">{{releaseNotes[appLanguage].progress['0']}}</li>
         </ul>
+        <h3 class="release-notes__title">{{releaseNotes[appLanguage].welcomePage}}</h3>
+        <ul class="release-notes__list">
+          <li class="release-notes__text">{{releaseNotes[appLanguage].progress['1']}}</li>
+        </ul>
       </div>
     </main>
   </app-dialog>
