--- a/src/app/shared/components/print-dialog/preview-page/preview-page.component.html
+++ b/src/app/shared/components/print-dialog/preview-page/preview-page.component.html
@@ -45,7 +45,7 @@
           <th mat-header-cell *matHeaderCellDef> {{column.name | translate}} </th>
           <td mat-cell *matCellDef="let record" [ngSwitch]="column.id"> 
             <span *ngSwitchCase="'date'" class="preview-page__nowrap">
-              {{ record[column.id] | date:dateFormat }}
+              {{ record[column.id] | localizedDate }}
             </span>
             <span *ngSwitchCase="'cost'" class="preview-page__nowrap">
               {{ record[column.id] | numberSeparator:this.settingsService.settings.region }}
