--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -25,8 +25,7 @@
                         (click)="openGitHub()">
     </app-dashboard-item>
 
-    <app-dashboard-item *ngIf="false"
-                        type="documentation"
+    <app-dashboard-item type="documentation"
                         header="Documentation"
                         description="How to use?"
                         external="true"
