--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@ html, body {
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import '/src/colors';
 @import '/src/animations';
+@import './platform-styles';
 @import '/src/fonts';
 
 
