--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -20,82 +20,13 @@
 
   --tooltip-background: #333;
   --tooltip-color: white;
-}
 
-
-html[data-platform='darwin'] {
-  &[data-theme='dark'] {
-    --background-primary: #343434;
-    --background-secondary: #3e3e3e;
-    --background-button-hover: #ffffff12;
-    --background-loader: #343434ad;
-
-    --color-border: #4d4d4d;
-    --color-button-icon: #f7f7f7;
-    --color-dangerous: #b62329;
-
-    --platform-color-primary: white;
-    --platform-color-secondary: #a6a6a6;
-
-    --select-expand-icon-color: #d2d5d9;
-
-    --toggle-active-color: var(--platform-color-primary);
-
-    --menu-border: 1.5px solid var(--color-border);
-
-    --tooltip-background: var(--background-primary);
-    --tooltip-color: var(--platform-color-primary);
-  }
-}
-
-html[data-platform='linux'] {
-  &[data-theme='dark'] {
-    --background-primary: #343434;
-    --background-secondary: #3e3e3e;
-    --background-button-hover: #ffffff12;
-    --background-loader: #343434ad;
-
-    --color-border: #4d4d4d;
-    --color-button-icon: #f7f7f7;
-    --color-dangerous: #d7121a;
-
-    --platform-color-primary: white;
-    --platform-color-secondary: #a6a6a6;
-
-    --select-expand-icon-color: #d2d5d9;
-
-    --toggle-active-color: var(--platform-color-primary);
-
-    --menu-border: 1.5px solid var(--color-border);
-
-    --tooltip-background: var(--background-primary);
-    --tooltip-color: var(--platform-color-primary);
-  }
-}
-
-html[data-platform='windows'] {
-  &[data-theme='dark'] {
-    --background-primary: #202020;
-    --background-secondary: #2b2b2b;
-    --background-button-hover: #2d2d2d;
-    --background-loader: #202020ad;
-
-    --color-border: #343434;
-    --color-button-icon: white;
-    --color-dangerous: #b7060d;
-
-    --platform-color-primary: white;
-    --platform-color-secondary: #9e9e9e;
-
-    --select-expand-icon-color: var(--platform-color-primary);
-
-    --toggle-active-color: var(--platform-color-primary);
-
-    --menu-border: 1.5px solid var(--color-border);
-
-    --tooltip-background: var(--background-primary);
-    --tooltip-color: var(--platform-color-primary);
-  }
+  --dashboard-background-primary: var(--background-primary);
+  --dashboard-background-secondary: var(--secondary-color);
+  --dashboard-illustration-background-primary: var(--secondary-color);
+  --dashboard-illustration-background-secondary: var(--background-secondary);
+  --dashboard-illustration-background-tertiary: #4b4848;
+  --dashboard-card-icon-color: var(--platform-color-secondary);
 }
 
 $color-primary: var(--primary-color);
