feat(app): update styles

--- a/src/app/shared/components/rich-widget/rich-widget.component.scss
+++ b/src/app/shared/components/rich-widget/rich-widget.component.scss
@@ -51,7 +51,7 @@
 
   &__illustration {
     padding: 8px;
-    background-color: $color-secondary;
+    background-color: $widget-icon-background;
     color: $color-primary;
     font-size: 24px;
     height: 24px;
