--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,34 +1,3 @@
-:root {
-  --background-primary: white;
-  --background-secondary: #fafafa;
-  --background-button-hover: #0000000d;
-  --background-loader: #fafafaad;
-
-
-  --color-border: #ebebeb;
-  --color-button-icon: #4b4848;
-  --color-dangerous: #c7162b;
-
-  --platform-color-primary: #222;
-  --platform-color-secondary: #4b4848;
-
-  --select-expand-icon-color: #4b4848;
-
-  --toggle-active-color: white;
-
-  --menu-border: none;
-
-  --tooltip-background: #333;
-  --tooltip-color: white;
-
-  --dashboard-background-primary: var(--background-primary);
-  --dashboard-background-secondary: var(--secondary-color);
-  --dashboard-illustration-background-primary: var(--secondary-color);
-  --dashboard-illustration-background-secondary: var(--background-secondary);
-  --dashboard-illustration-background-tertiary: #4b4848;
-  --dashboard-card-icon-color: var(--platform-color-secondary);
-}
-
 $color-primary: var(--primary-color);
 $color-secondary: var(--secondary-color);
 $color-dangerous: var(--color-dangerous);
@@ -51,3 +20,5 @@ $menu-border: var(--menu-border);
 
 $tooltip-background: var(--tooltip-background);
 $tooltip-color: var(--tooltip-color);
+
+$widget-icon-background: var(--widget-icon-background);
