--- a/src/app/shared/components/widget/widget.component.scss
+++ b/src/app/shared/components/widget/widget.component.scss
@@ -55,7 +55,7 @@
     line-height: 16px;
     color: $color-primary;
     padding: 6px;
-    background-color: $color-secondary;
+    background-color: $widget-icon-background;
     border-radius: 10px;
   }
 }
